# fr3_ros

./: CMakeLists.txt  package.xml
launch/: demo_generate_cartesian_pose.launch  demo_openvla_real.launch  demo_pub_frankastate.launch  demo_replay.launch  demo_test_action.launch  openvla_action_srv.launch  read_rosbag.launch
src/: demo_generate_cartesian_pose.cpp  demo_openvla_real.cpp  demo_pub_frankastate.cpp  demo_replay.cpp  demo_test_action.cpp  openvla_action_srv.py  read_rosbag.py
srv/: openvla_action_srv.srv  openvla_instr_srv.srv
