<?xml version="1.0"?>
<package format="2">
  <name>openvla_real_expr</name>
  <version>0.0.0</version>
  <description>The openvla_real_expr package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="vivian@todo.todo">vivian</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>franka_msgs</exec_depend>
  <build_depend>franka_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>gazebo_msgs</build_depend>
  <exec_depend>gazebo_msgs</exec_depend>  
  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>moveit_ros_move_group</build_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <build_depend>moveit_msgs</build_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <!-- <build_depend>geometric_shapes</build_depend>
  <exec_depend>geometric_shapes</exec_depend> -->
  <build_depend>franka_description</build_depend>
  <exec_depend>franka_description</exec_depend>
  <build_depend>franka_gripper</build_depend>
  <exec_depend>franka_gripper</exec_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>
  <build_depend>shape_msgs</build_depend>
  <exec_depend>shape_msgs</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <!-- <build_depend>message_filters</build_depend>
  <exec_depend>message_filters</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
